cleaned up spaces, tried to find trainer alignment issue to no avail

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,7 @@ header h1 {
     display: inline;
 }
 
-header a {
-    color: #fce138
-}
+
 header a {
     text-decoration: none;
     color: #fce138;
@@ -61,81 +59,53 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: 3024e76;
+    color: #024e76;
 }
 
 section {
 
-    padding: 60px;
-
-    
+    padding: 60px; 
 
 }
 
 /* Hero Style Start */
 
 .hero {
-
     background-image: url("../images/hero-bg.jpg");
-
     height: 600px;
-
     background-size: cover;
-
     background-position: center;
-
     position: relative;
 }
 /* Hero Style End   */
 
 /* Hero Form */
 .hero-form {
-
-    color: #024e76;
-
+    border: 3px solid #024e76;
     background-color: #fce138;
-
     padding: 20px;
-
     width: 500px;
-
-    border: solid 3px #024e76;
-
+    color: #024e76;    
     position: absolute;
-
     bottom: 120px;
-
     right: 140px;
-
 }
-
-.hero-form p {
-
-    margin: 5px 0 15px 0; 
-
-}
-
 .hero-form h3 {
-
     font-size: 24px;
-
     margin: 0;
 }
 
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+
 .form-input {
-
     border: 1px solid #024376; 
-
     display: block;
-
     padding: 7px 15px;
-
     font-size: 16px;
-
     color: #024e76;
-
     width: 100%;
-
     margin-bottom: 15px;
 }
 
@@ -145,60 +115,21 @@ section {
 }
 
 .hero-form button {
-
     color: #fce138;
-
     background-color: #024e76;
-
     border: none;
-
     padding: 10px 20px;
-
     font-size: 16px;
 }
 /* Hero Styles End */
 
 .intro {
-
     text-align: center;
 }
-
-.section-title {
-
-    font-size: 55px;
-
-    color: #024376;
-
-    margin-bottom: 35px;
-
-    padding: 0 100px 20px 100px;
-
-    display: inline-block;
-
-    border-bottom: 3px solid;
-
-}
-
-.primary-border {
-
-    border-color: #fce138;
-
-}
-
-.secodary-border {
-
-    border-color: #39a6b2;
-}
-
-
 .intro p {
-
     line-height: 1.7;
-
     color: #39a6b2;
-
     width: 80%;
-
     font-size: 20px;
 /* using margin: 0 auto; is another tactic like display: inline-block;
 however, margin: 0 auto only works horizontally, not vertically. */
@@ -206,120 +137,102 @@ however, margin: 0 auto only works horizontally, not vertically. */
 }
 
 .steps {
-
     text-align: center;
-
     background: #fce138;
 }
 
 .steps div {
-
     margin-bottom: 80px;
-
 }
 
 .steps img {
 
     width: 15%;
+    margin: 10px 0;
 
 }
 
 .steps h3 {
-
     color: #024e76;
-
     font-size: 46px;
-
     margin-top: 10px;
-
 }
 
 .steps p {
-
     color: #39a6b2;
-
     font-size: 23px;
 }
 
 .steps span {
-
     font-size: 38px;
 }
 
+.section-title {
+    font-size: 55px;
+    color: #024376;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secodary-border {
+    border-color: #39a6b2;
+}
 .trainers {
-
     text-align: center;
-
 }
 .trainer {
 
     width: 900px;
-
     margin: 0 auto 30px auto;
-
     background: #024e76;
-
     color: #fce138;
-
     overflow: auto;
 }
 
 .trainer img {
 
     width: 35%;
-
     float: left;
 }
 
 .trainer-bio {
 
     padding: 35x;
-
     float: left;
-
     width: 65%;
 
 }
 
-.text-left {
-
-    text-align: left;
-
-}
-
-.text-right {
-
-    text-align: right;
-
-    }
-
 .trainer-bio h3 {
 
     font-size: 32px;
-
     margin-bottom: 8px;
-
-    margin-left: 25px;
-
-    margin-top: 25px;
+        
 }
 
 .trainer-bio h4 {
 
     font-weight: lighter;
-
     font-size: 26px;
-
     margin-bottom: 25px;
-
-    margin-left: 25px;
 }
 
 .trainer-bio p {
 
     font-size: 17px;
-
     line-height: 1.3;
 
-    margin-left: 25px;
+}
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
 }
